The Horizontally Not Centered Text On Game Over Card Fix Update

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button:active {
 .gameOver {
     display: flex;
     align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;
     left: 0;
